# SFLOW-Ignition-CLI

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  tags-backup.json
.claude/plans/: ignition-cli
.github/workflows/: ci.yml
docs/: usage.md
docs/plans/: docker.md
docs/skills/: perspective-screens.md
src/ignition_cli/: __init__.py  __main__.py  app.py
src/ignition_cli/client/: auth.py  errors.py  gateway.py
src/ignition_cli/commands/: _common.py  api.py  config_cmd.py  device.py  gateway.py  modes.py  perspective.py  project.py  resource.py  tag.py
src/ignition_cli/config/: constants.py  manager.py  models.py
src/ignition_cli/models/: __init__.py  common.py  device.py  gateway.py  mode.py  perspective.py  project.py  resource.py  tag.py
src/ignition_cli/output/: formatter.py  tables.py
src/ignition_cli/utils/: diff.py  file_watcher.py
tests/: conftest.py
tests/e2e/: conftest.py  test_live_gateway.py
tests/integration/: test_api_commands.py  test_config_commands.py  test_device_commands.py  test_gateway_commands.py  test_modes_commands.py  test_perspective_commands.py  test_project_commands.py  test_resource_commands.py  test_tag_commands.py
tests/unit/: test_client.py  test_common_helpers.py  test_config_manager.py  test_config_models.py  test_errors.py  test_formatter.py  test_mode_model.py  test_output.py  test_perspective_models.py  test_resource_model.py
tools/: perspective-viewer.html
